# Medical-Question-Answering

./: .env  Dockerfile  README.md  config.py  docker-compose.yml  docker-restart.sh  pyproject.toml  requirement_lambda.txt  utils.py
MedVQA/: README.md  docker-comp.yml  gitignore.txt  requirements.txt  setup.py
MedVQA/infra/remote-state/: backend.tf
MedVQA/scripts/docker/: entrypoint.sh
MedVQA/scripts/docker/.ipynb_checkpoints/: Dockerfile-checkpoint
MedVQA/src/components/ingestion/: chunking.py
MedVQA/src/components/llm/: bedrock_llm.py
MedVQA/src/components/vectorstore/: chroma_wrapper.py
examples/: rag_demo.ipynb  sbert_local_demo.ipynb  titan_bedrock_demo.ipynb
infra/remote-state/: backend.tf  s3.tf
scripts/: create_completions_endpoint.sh  create_models_endpoint.sh  deploy.sh  dev.bash  docker_cmd.sh  lambda_build.sh  pyproject.toml
src/: __init__.py
src/blueprints/: bedrock_assistant.tf  s3_ingestion.tf  vector_db.tf
src/components/: __init__.py
src/components/embeddings/: __init__.py  sbert_embedder.py  titan_embedder.py
src/components/ingestion/: __init__.py  pdf_ingestion.py
src/components/llm/: __init__.py  prompt_templates.py
src/components/rag/: __init__.py  pipeline.py  qa_workflow.py
src/components/vectorstore/: __init__.py  faiss_store.py  opensearch_store.py
tests/: test_pipeline.py
