[project]
name = "MedicaQA"
version = "0.1.0"
description = "Benchmarking framework for medical QA using RAG"
authors = [{name = "Jamuna VerityLabs"}]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pytoml = "^0.1.21"


# Added dependencies (production)
boto3 = "1.35.74"
botocore = "1.35.74"
kiwisolver = "1.4.4"
PyYAML = "6.0.2"
opensearch-py = "2.8.0"
requests-aws4auth = "1.3.1"
tiktoken = "0.8.0"
python-pptx = "1.0.2"
pandas = "2.2.3"
numpy = "1.26.4"
pypdf = "5.1.0"
PyPDF2 = "3.0.1"
#pdfminer.six = "20240706"
requests = "2.32.3"
six = "1.16.0"
tqdm = "4.67.1"
typing_extensions = "4.12.2"
awswrangler = "3.11.0"
pyarrow = "18.1.0"
python-multipart = "0.0.20"
python-jose = ">=3.0.0"
starlette = "0.45.1"